Added html and css changes.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
         </nav>
         
-        <section class="white_headphone_picture">
-                <div>
+        <section class="white_headphone_section">
+                <div class="white_headphone_text_section">
                     <h1>The headphones of the future</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repudiandae rerum libero ipsum asperiores omnis mollitia, nostrum commodi placeat ea itaque modi corrupti corporis nam voluptas aut reprehenderit eaque culpa.</p>
                     <button>Read More</button>
