Updated the css file.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <button>Read More</button>
                 </div>
         </section>
-        <section>
-            <div>
+        <section class="section_two">
+            <div class="section_two_text">
                 <h3>Loud & Clear</h3>
                 <h2>People Aren't Hearing All the Music</h2>
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae laboriosam quia, error tempore porro ducimus voluptate laborum nostrum iure.</h3>
