Updated css and added footer section.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 </ul>
             </div>
         </nav>
-        
         <section class="white_headphone_section">
                 <div class="white_headphone_text_section">
                     <h1>The headphones of the future</h1>
@@ -37,6 +36,35 @@
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae laboriosam quia, error tempore porro ducimus voluptate laborum nostrum iure.</h3>
             </div>
         </section>
-        
+        <section class="collage_pic_section"> 
+            <img src="images/2041642946-huge.jpg" alt="collage of diverse people listening to music with headphones on in a red and blue/pink background">
+        </section>
+
+        <footer class="footer_section">
+            <div class="col_1">
+                <h2>Phono</h2>
+            </div>
+            <div class="col_2"> 
+                <h3>Company Info</h3>
+                <ul>
+                    <li>About Us</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
+                </ul>
+            </div>
+            <div class="col_3"> 
+                <h3>Blog Posts</h3>
+                <ul>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum dolor.</li>
+                    <li>Lorem ipsum dolor.</li>
+                </ul>
+            </div>
+            <div class="col_4"> 
+                <h3>Subscribe</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <button="submit"></button>
+            </div>
+        </footer>
     </body>
 </html>
