Updated css file.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="white_headphone_text_section">
                     <h1>The headphones of the future</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repudiandae rerum libero ipsum asperiores omnis mollitia, nostrum commodi placeat ea itaque modi corrupti corporis nam voluptas aut reprehenderit eaque culpa.</p>
-                    <button>Read More</button>
+                    <button class="white_headphone_section_btn">Read More</button>
                 </div>
         </section>
         <section class="section_two">
@@ -63,7 +63,7 @@
             <div class="col_4"> 
                 <h3>Subscribe</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <button="submit"></button>
+                <button type="submit" class="footer_btn">Email</button>
             </div>
         </footer>
     </body>
