Updated css file.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae laboriosam quia, error tempore porro ducimus voluptate laborum nostrum iure.</h3>
             </div>
         </section>
-        <section class="collage_pic_section"> 
+        <section class="images/2041642946-huge.jpg"> 
             <img src="images/2041642946-huge.jpg" alt="collage of diverse people listening to music with headphones on in a red and blue/pink background">
         </section>
 
