Updated js file.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,29 @@
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae laboriosam quia, error tempore porro ducimus voluptate laborum nostrum iure.</h3>
             </div>
         </section>
-        <section class="images/2041642946-huge.jpg"> 
-            <img src="images/2041642946-huge.jpg" alt="collage of diverse people listening to music with headphones on in a red and blue/pink background">
+        <section class="section-three"> 
+            <div class="gallery">
+                <a href="https://i.ibb.co/CHLBZnp/gal2323.jpg" class="big active"
+                ><img src="https://i.ibb.co/CHLBZnp/gal2323.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/4pBbhfY/gal39834.jpg" class="big active"
+                ><img src="https://i.ibb.co/4pBbhfY/gal39834.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/xSnHP7g/gal43884.jpg" class="big active"
+                ><img src="https://i.ibb.co/xSnHP7g/gal43884.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/QN6Bnrb/gal4958.jpg" class="big active"
+                ><img src="https://i.ibb.co/QN6Bnrb/gal4958.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/dGZvj75/gal4545.jpg" class="big active">
+                <img src="https://i.ibb.co/dGZvj75/gal4545.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/S6FVFNt/gal74744.jpg" class="big active"
+                ><img src="https://i.ibb.co/S6FVFNt/gal74744.jpg" alt=""
+            /></a>
+            </div>
         </section>
+    
 
         <footer class="footer_section">
             <div class="col_1">
