--- a/index.html
+++ b/index.html
@@ -86,5 +86,6 @@
                 <button type="submit" class="footer_btn">Email</button>
             </div>
         </footer>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
