--- a/index.html
+++ b/index.html
@@ -38,24 +38,12 @@
         </section>
         <section class="section-three"> 
             <div class="gallery">
-                <a href="https://i.ibb.co/CHLBZnp/gal2323.jpg" class="big active"
-                ><img src="https://i.ibb.co/CHLBZnp/gal2323.jpg" alt=""
-              /></a>
-              <a href="https://i.ibb.co/4pBbhfY/gal39834.jpg" class="big active"
-                ><img src="https://i.ibb.co/4pBbhfY/gal39834.jpg" alt=""
-              /></a>
-              <a href="https://i.ibb.co/xSnHP7g/gal43884.jpg" class="big active"
-                ><img src="https://i.ibb.co/xSnHP7g/gal43884.jpg" alt=""
-              /></a>
-              <a href="https://i.ibb.co/QN6Bnrb/gal4958.jpg" class="big active"
-                ><img src="https://i.ibb.co/QN6Bnrb/gal4958.jpg" alt=""
-              /></a>
-              <a href="https://i.ibb.co/dGZvj75/gal4545.jpg" class="big active">
-                <img src="https://i.ibb.co/dGZvj75/gal4545.jpg" alt=""
-              /></a>
-              <a href="https://i.ibb.co/S6FVFNt/gal74744.jpg" class="big active"
-                ><img src="https://i.ibb.co/S6FVFNt/gal74744.jpg" alt=""
-            /></a>
+                <img src="images/pexels-pnw-production-7577336.jpg" alt="2 black women listening to music with headphones" class="light-box">
+                <img src="images/pexels-cottonbro-4090902.jpg" alt="headphones sitting on desk"  class="light-box">
+                <img src="images/pexels-cottonbro-3945667.jpg" alt="black headphones on white background"  class="light-box">
+                <img src="images/pexels-jacoby-clarke-5249311.jpg" alt="black headphones"  class="light-box">
+                <img src="images/pexels-sound-on-3394663.jpg" alt="whiteheadphones"  class="light-box">
+                <img src="images/pexels-karolina-grabowska-6633273.jpg" alt="woman in purple sweatshirt listening to music with headphones" class="light-box">
             </div>
         </section>
     
