--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         </nav>
         <section class="white_headphone_section">
                 <div class="white_headphone_text_section">
-                    <h1>The headphones of the future</h1>
+                    <h1>Headphones For Your</h1>
+                        <h1 class="typing"></h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo repudiandae rerum libero ipsum asperiores omnis mollitia, nostrum commodi placeat ea itaque modi corrupti corporis nam voluptas aut reprehenderit eaque culpa.</p>
                     <button class="white_headphone_section_btn">Read More</button>
                 </div>
@@ -36,18 +37,28 @@
                 <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta repudiandae laboriosam quia, error tempore porro ducimus voluptate laborum nostrum iure.</h3>
             </div>
         </section>
-        <section class="section-three"> 
+        <section class="section-three">
             <div class="gallery">
-                <img src="images/pexels-pnw-production-7577336.jpg" alt="2 black women listening to music with headphones" class="light-box">
-                <img src="images/pexels-cottonbro-4090902.jpg" alt="headphones sitting on desk"  class="light-box">
-                <img src="images/pexels-cottonbro-3945667.jpg" alt="black headphones on white background"  class="light-box">
-                <img src="images/pexels-jacoby-clarke-5249311.jpg" alt="black headphones"  class="light-box">
-                <img src="images/pexels-sound-on-3394663.jpg" alt="whiteheadphones"  class="light-box">
-                <img src="images/pexels-karolina-grabowska-6633273.jpg" alt="woman in purple sweatshirt listening to music with headphones" class="light-box">
+              <a href="https://i.ibb.co/CHLBZnp/gal2323.jpg" class="big"
+                ><img src="https://i.ibb.co/CHLBZnp/gal2323.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/4pBbhfY/gal39834.jpg" class="big"
+                ><img src="https://i.ibb.co/4pBbhfY/gal39834.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/xSnHP7g/gal43884.jpg" class="big"
+                ><img src="https://i.ibb.co/xSnHP7g/gal43884.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/QN6Bnrb/gal4958.jpg" class="big"
+                ><img src="https://i.ibb.co/QN6Bnrb/gal4958.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/dGZvj75/gal4545.jpg" class="big">
+                <img src="https://i.ibb.co/dGZvj75/gal4545.jpg" alt=""
+              /></a>
+              <a href="https://i.ibb.co/S6FVFNt/gal74744.jpg" class="big"
+                ><img src="https://i.ibb.co/S6FVFNt/gal74744.jpg" alt=""
+              /></a>
             </div>
         </section>
-    
-
         <footer class="footer_section">
             <div class="col_1">
                 <h2>Phono</h2>
@@ -74,6 +85,6 @@
                 <button type="submit" class="footer_btn">Email</button>
             </div>
         </footer>
-        <script type="text/javascript" src="script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
